# magic_tree

./: .gitignore  README.md  pyproject.toml
magic_tree/: __init__.py  __main__.py  demo.py  magic_tree_dict.py  magic_tree_dictionary.py
magic_tree/controller/builders/: conversation_tree_builder.py  directory_tree_builder.py
magic_tree/controller/computation/: apply_function_to_nodes.py
magic_tree/examples/: __init__.py  demo.py
magic_tree/examples/document_tree_eater/: document_tree_eater.py
magic_tree/examples/document_tree_eater/helpers/: llm_chains.py
magic_tree/examples/tree_eaters/: code_tree_eater.py  conversation_tree_eater.py
magic_tree/examples/tree_eaters/helpers/: document_llm_chains.py
magic_tree/helpers/: calculator.py  demo.py  directory_tree_builder.py  load_directory_as_tree.py  printer.py
magic_tree/models/configuration/: directory_tree_builder_configuration.py
magic_tree/system/: configure_logging.py
magic_tree/utilities/: quine.py
magic_tree/view/: __init__.py  printer.py
