[tool.poetry]
name = "magic_tree"
version = "0.1.0"
description = "Defines the `MagicTreeDict` class - which extends  `defaultdict` into an auto-building recursive tree for intuitive manipulation, analysis, and visualization of hierarchical data 🌱✨"
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <4"
rich = "*"
tabulate = "*"
pandas = "*"
pydantic = "*"
pyperclip = "*"
python-dotenv = "*"
langchain = "*"
openai = "*"
anthropic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
bumpver = "^2023.1127"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
